# node-cef

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  download-cef.ts  package.json  tsconfig.json
.github/workflows/: test.yml
example/: index.html  index.ts  tsconfig.json
scripts/: download-cef.ts
src/: app.cc  app.h  cef_bridge.cc  handler.cc  handler.h  index.ts  ipc.cc  ipc.h  main.cc  tsconfig.json
src/cpp/: CMakeLists.txt  cefsimple_linux.cc  combined_app.h  ipc_client.cpp  ipc_client.h  render_handler.cc  render_handler.h  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h  simple_handler_linux.cc
src/ts/: app.ts  client-bridge.ts  index.ts  ipc.ts  types.ts  window.ts
test/: index.html  index.ts  tsconfig.json
